--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   width: 100%;
+  height: 100svh;
 }
 
 main {
@@ -7,7 +8,8 @@ main {
   width: 100svw;
   margin: 0 auto;
   max-width: 560px;
-  height: 100svh;
+  max-height: 100svh;
+  height: 100%;
   box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.54);
   overflow: clip;
   position: relative;
