--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
+body, html {
+  height: 100svh;
+  overflow: clip;
+  position: fixed; 
+  overflow-y:scroll 
+}
+
+
 #root {
   width: 100%;
   height: 100%;
-}
-
-body {
-  height: 100svh;
-  max-height: 100svh;
+  align-self: flex-start;
 }
 
 main {
@@ -21,6 +25,7 @@ main {
 }
 
 nav {
+  position: sticky;
   background: var(--main-600);
   color: var(--main-100);
   box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.54);
