--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-body, html {
+body {
   height: 100svh;
-  overflow: clip;
-  position: fixed; 
-  overflow-y:scroll 
+  overflow-y: hidden;
 }
 
 
@@ -10,6 +8,7 @@ body, html {
   width: 100%;
   height: 100%;
   align-self: flex-start;
+  margin: auto;
 }
 
 main {
